fix skilltree spacing

--- a/components/card.css
+++ b/components/card.css
@@ -38,3 +38,6 @@
   top: 0;
   right: 0;
 }
+.skill-tree span {
+  margin-right: 0.4rem;
+}
